Add the application icon Implement the ability to set current directory

--- a/src/VideoApp/VideoApp.csproj
+++ b/src/VideoApp/VideoApp.csproj
@@ -22,6 +22,7 @@
 		<Authors>Albert Akhmetov</Authors>
 		<Product>VideoApp</Product>
 		<Version>0.1.0</Version>
+		<ApplicationIcon>Assets\app.ico</ApplicationIcon>
 		<PackageIcon></PackageIcon>
 		<PackageIconUrl />
 	</PropertyGroup>
