--- a/src/VideoApp.Core/VideoApp.Core.csproj
+++ b/src/VideoApp.Core/VideoApp.Core.csproj
@@ -10,6 +10,7 @@
 	
 	<PropertyGroup>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
